--- a/client/src/components/Banner/banner.css
+++ b/client/src/components/Banner/banner.css
@@ -7,6 +7,7 @@
     background-color: blue;
     padding-top: 150px;
     padding-bottom: 200px;
+    min-height: 100vh;
 }
 .quote{
    color: white;
