--- a/client/src/components/Products/products.css
+++ b/client/src/components/Products/products.css
@@ -24,3 +24,9 @@
     text-decoration: none !important;
     color: black;
 }
+.ploading{
+    position: absolute;
+    text-align: center;
+    left: 50%;
+    top: 50%;
+}
